# metaphoto

./: .gitignore  LICENSE  Makefile  pyproject.toml
requirements/: dev.txt  main.txt
src/metaphoto/: example.py  example2.py  get_metadata.py  main.py
